# hidtool

./: CMakeLists.txt  README.md  main.cpp
